test/libsolidity/syntaxTests/functionTypes/function_type_parameters_with_names.hyp
contract C {
    function(uint a) returns (bool) f;
}
// ----
// SyntaxError 6162: (26-32): Parameters in function types may not be named.
